--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Solution for taking the last value from multiple calls",
   "scripts": {
     "start": "umi-lib doc dev",
-    "doc": "umi-lib doc build && umi-lib doc deploy",
+    "doc": "umi-lib doc build && cpx docs/404.html .docz/dist/ && umi-lib doc deploy",
     "build": "umi-lib build",
     "prepare": "npm run build",
     "test": "npm run build && mocha"
@@ -35,6 +35,7 @@
   "devDependencies": {
     "axios": "^0.18.0",
     "chai": "^4.2.0",
+    "cpx": "^1.5.0",
     "docz-plugin-splash": "^1.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -42,7 +43,7 @@
     "mocha": "^6.0.2",
     "nock": "^10.0.6",
     "typescript": "^3.3.4000",
-    "umi-library": "^1.2.4"
+    "umi-library": "^1.4.1"
   },
   "peerDependencies": {
     "axios": "^0.18.0"
